# c8e-rs

./: .gitignore  Cargo.toml  README.md  body-format.json
examples/: pages.rs  ping.rs
src/: client.rs  error.rs  lib.rs
src/api/: pages.rs
tests/: integration_test.rs
