[package]
name = "c8e-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
